--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </ul>
 
   <h2>Контакты</h2>
-  <p>📧 Напиши мне: <a href="poliesovoi.vadym@gmail.com">poliesovoi.vadym@gmail.com</a></p>
+  <p>📧 Напиши мне: <a href="mailto:poliesovoi.vadym@gmail.com">poliesovoi.vadym@gmail.com</a></p>
   <p>💬 Telegram: <a href="https://web.telegram.org/k/#@nature_flips" target="_blank">@nature_flips</a></p>
 </body>
 </html>
