--- a/index.html
+++ b/index.html
@@ -1,22 +1,114 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Vadym Dev - Resume</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #121212;
+      color: #e0e0e0;
+      line-height: 1.6;
+      padding: 40px;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background-color: #1e1e1e;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    }
+
+    h1 {
+      margin-top: 0;
+      font-size: 2.5em;
+      color: #ffffff;
+    }
+
+    h2 {
+      border-bottom: 1px solid #333;
+      padding-bottom: 5px;
+      margin-top: 40px;
+      color: #ffffff;
+    }
+
+    a {
+      color: #90caf9;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .profile-pic {
+      max-width: 180px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 10px rgba(255,255,255,0.1);
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    .section {
+      margin-bottom: 30px;
+    }
+
+    .skills-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .skill {
+      background-color: #2c2c2c;
+      padding: 8px 12px;
+      border-radius: 6px;
+      font-size: 0.9em;
+      color: #ffffff;
+      border: 1px solid #3a3a3a;
+    }
+  </style>
 </head>
 <body>
-  <img src="Img/c5c1ceb3-0be6-4085-82d4-8da8b2daafa8.jfif" alt="Фото Вадима" style="max-width: 300px;">
-  <h1>Vadym Poliesovoi</h1>
-  <p>Молодой амбициозный начинающий разработчик. Учусь, развиваюсь и готов к новым вызовам. Люблю создавать, а не просто смотреть. 🚀</p>
+  <div class="container">
+    <img src="Img/c5c1ceb3-0be6-4085-82d4-8da8b2daafa8.jfif" alt="Vadym's Photo" class="profile-pic">
+    <h1>Vadym Poliesovoi</h1>
 
-  <h2>Опыт</h2>
-  <ul>
-    <li>I am studing frontend development</li>
-    <li>Work with HTML and also learning Git, CSS and JavaScript</li>
-  </ul>
+    <div class="section">
+      <p>I'm a motivated and ambitious beginner developer who's decided to build a life in programming. I love challenges, learn fast, and take pride in creating things rather than just observing. Constant growth is my baseline, not my goal. 🚀</p>
+    </div>
 
-  <h2>Контакты</h2>
-  <p>📧 Напиши мне: <a href="mailto:poliesovoi.vadym@gmail.com">poliesovoi.vadym@gmail.com</a></p>
-  <p>💬 Telegram: <a href="https://web.telegram.org/k/#@nature_flips" target="_blank">@nature_flips</a></p>
+    <div class="section">
+      <h2>Experience</h2>
+      <ul>
+        <li>I am studying frontend development</li>
+        <li>Work with HTML and also learning Git, CSS and JavaScript</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Skills</h2>
+      <div class="skills-list">
+        <div class="skill">HTML</div>
+        <div class="skill">CSS</div>
+        <div class="skill">Git</div>
+        <div class="skill">Responsive Layout</div>
+        <div class="skill">JavaScript (Learning)</div>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>Contacts</h2>
+      <p>📧 Email: <a href="mailto:poliesovoi.vadym@gmail.com">poliesovoi.vadym@gmail.com</a></p>
+      <p>💬 Telegram: <a href="https://web.telegram.org/k/#@nature_flips" target="_blank">@nature_flips</a></p>
+    </div>
+  </div>
 </body>
 </html>
