--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <div class="services-grid">
           <article class="service-card">
             <h3>Web Design</h3>
-            <p class="muted">Modern and clean website layouts.</p>
+            <p class="muted">Clean, modern, and user-friendly website layouts.</p>
             <button class="btn btn-examples" data-service="design">Examples</button>
           </article>
 
           <article class="service-card">
             <h3>Frontend Development</h3>
-            <p class="muted">Responsive sites with smooth animations.</p>
+            <p class="muted">Responsive and fast-loading websites with smooth animations.</p>
             <button class="btn btn-examples" data-service="frontend">Examples</button>
           </article>
 
           <article class="service-card">
             <h3>UI Improvements</h3>
-            <p class="muted">Enhancing existing interfaces for usability.</p>
+            <p class="muted">Modernizing and improving existing interfaces for better UX.</p>
             <button class="btn btn-examples" data-service="ui">Examples</button>
           </article>
         </div>
