--- a/index.html
+++ b/index.html
@@ -173,7 +173,10 @@
     // Examples slider
     const examplesData = {
   design: [
-    { img: "https://via.placeholder.com/300x180?text=Design+1", link: "C:\Users\consu\vadymdev\Web Design ex\Ex1\Index.html" },
+    {
+      img: "./web-design-ex/preview.jpg",
+      link: "https://vadymdev.github.io/web-design-ex/"
+    },
     { img: "https://via.placeholder.com/300x180?text=Design+2" },
     { img: "https://via.placeholder.com/300x180?text=Design+3" }
   ],
