--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
     const examplesData = {
   design: [
     {
-      img: "./web-design-ex/preview.jpg",
-      link: "https://vadymdev.github.io/web-design-ex/"
+      img: "./web-design-ex/ex1/preview.jpg",
+      link: "https://vadymdev.github.io/web-design-ex/ex1/"
     },
     { img: "https://via.placeholder.com/300x180?text=Design+2" },
     { img: "https://via.placeholder.com/300x180?text=Design+3" }
