--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   design: [
     {
       img: "./web-design-ex/ex1/preview.jpg",
-      link: "https://vadymdev.com/web-design-ex/ex1/"
+      link: "https://vadymdev.com/web-design-ex/ex1/index.html"
     },
     { img: "https://via.placeholder.com/300x180?text=Design+2" },
     { img: "https://via.placeholder.com/300x180?text=Design+3" }
