--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     const examplesData = {
   design: [
     {
-      img: "./web-design-ex/ex1/preview.jpg",
+      img: "https://vadymdev.com/img/imgex.1.jpg",
       link: "https://vadymdev.com/web-design-ex/ex1/ex1landing.html"
     },
     { img: "https://via.placeholder.com/300x180?text=Design+2" },
