--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           </article>
         </div>
 
-        <!-- Dynamic examples slider -->
-        <div id="examples-container" class="slider-container"></div>
+        <div class="examples-section">
+        <div id="examples-container"></div>
       </div>
-    </section>
+
 
     <!-- Reviews -->
     <section id="reviews" class="section reviews">
